2004-10-27  ujwal

	* Fixed bug in nested bookmark search.

2004-10-22	fabian

	* Updated Japanese nib files using translation provided by OHKAWA Yuichi.
	* Updated zh_CN, zh_TW, Japanese, Korean, French, German nib files for next controls.
	
2004-10-20  ujwal
	
	* Fixed more reverse video issues on OpenVMS: in [VT100Screen: -eraseDisplay], all 
	  erased characters get default foreground and background colors.

2004-10-20  ujwal

	* Fixed reverse video problem in OpenVMS again. Hopefully, this time it 
	  is the correct fix. In [VT100Screen: -scrollUp] and [VT100Screen: -scrollDown], 
	  new lines have DEFAULT_FG_COLOR_CODE DEFAULT_BG_COLOR_CODE for foreground and 
	  background colors respectively instead of using the terminal's current fg and bg 
	  colors. I am not sure why OpenVMS does not set the video properties appropriately 
	  when scrolling.

2004-10-10  ujwal

	* Added support to display Bookmarks in drawer of terminal window.

2004-10-03  ujwal

	* Periodically refreshing autorelease pool in display update thread to avoid 
	  memory leak from autoreleased objects.
	* Fixed code for numeric enter from \012 to \015.

2004-09-25  ujwal
	
	* Fixed problem when PTYSession: -keyDown is never called when numeric or function 
	  keys were pressed. This messes up switching between application and numeric 
	  keypad modes. Now PTYTextView: -keyDown: invokes PTYSession: -keyDown: when 
	  numeric or function keys are pressed.	  
	* Fixed printing to NOT wrap text.	
	* Added support to launch command line tools from Finder.

2004-09-12  fabian
	
	* More fix for "Font Size Follows Window Resize" option. Largely works now,
	  but maximization still has weird behavior sometimes.
	  
2004-09-07  ujwal

	* setHidden method is invoked only if target view supports it (>= 10.3).
	* Added keybinding action for numeric enter key.

2004-09-02	fabian
	
	* Added "Maximize Vertically Only" option.
	* Added "Font Size Follows Window Resize" option (not working well yet)
	